package rules;

public interface GameRule {}
